Update comment to reflect author's contribution

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /**
  * ForestGuard – Map Page (Aida)
- * AIDA WORKED ON THIS
+ * THIS IS AIDA'S WORK
  
  * This file styles the main map page for the ForestGuard project.
  * I focused on keeping the UI clean, simple, and easy to navigate.
